--- a/Assets/UI/InGameUI.uxml
+++ b/Assets/UI/InGameUI.uxml
@@ -15,9 +15,14 @@
             </ui:VisualElement>
         </ui:VisualElement>
     </ui:VisualElement>
-    <ui:VisualElement name="Bottom" style="flex-grow: 0; flex-direction: row; justify-content: flex-start;">
-        <ui:VisualElement name="Regions" style="flex-grow: 0.5; justify-content: center; align-items: center; max-width: 50%; max-height: 40px; min-width: 50%;">
-            <ui:Label display-tooltip-when-elided="true" name="RegionName" text="ProvinceName" style="justify-content: center;" />
+    <ui:VisualElement name="Bottom" style="flex-grow: 0; flex-direction: row; justify-content: flex-start; flex-wrap: nowrap;">
+        <ui:VisualElement name="Provinces" style="flex-grow: 1; justify-content: center; align-items: center; max-width: 50%; max-height: none; min-width: 50%;">
+            <ui:Label display-tooltip-when-elided="true" name="ProvinceName" text="ProvinceName" style="justify-content: center;" />
+            <ui:Label text="ProvinceOwner" display-tooltip-when-elided="true" name="ProvinceOwner" />
+            <ui:VisualElement style="flex-direction: row;">
+                <ui:Label text="Footmen" display-tooltip-when-elided="true" name="FootmenLabel" />
+                <ui:Label text="FootmenValue" display-tooltip-when-elided="true" name="FootmenValue" />
+            </ui:VisualElement>
         </ui:VisualElement>
         <ui:VisualElement style="flex-grow: 0.5; align-items: center; flex-direction: row; justify-content: flex-start;">
             <ui:Button text="End Turn" display-tooltip-when-elided="true" name="EndTurn" />
