--- a/Assets/UI/InGameUI.uxml
+++ b/Assets/UI/InGameUI.uxml
@@ -1,7 +1,13 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement name="Top" style="flex-grow: 1; flex-direction: row;">
+    <ui:VisualElement name="Top" style="flex-grow: 0; flex-direction: column; flex-shrink: 1; justify-content: flex-start; align-items: flex-start; align-self: center;">
+        <ui:VisualElement name="Middle" style="flex-grow: 1; align-items: flex-start;">
+            <ui:Button text="Menu" display-tooltip-when-elided="true" name="Menu" style="justify-content: center; flex-direction: column;" />
+        </ui:VisualElement>
+    </ui:VisualElement>
+    <ui:VisualElement name="Middle" style="flex-grow: 1; flex-direction: row;">
         <ui:VisualElement name="Left" style="flex-grow: 0; justify-content: center; flex-direction: column;">
-            <ui:Button text="Menu" display-tooltip-when-elided="true" name="Menu" style="justify-content: center;" />
+            <ui:Button text="Terrain" display-tooltip-when-elided="true" name="Terrain" style="justify-content: center;" />
+            <ui:Button text="Provinces" display-tooltip-when-elided="true" name="Provinces" style="justify-content: center;" />
         </ui:VisualElement>
         <ui:VisualElement name="Middle" style="flex-grow: 1;" />
         <ui:VisualElement name="Right" style="flex-grow: 0;">
