--- a/Assets/MapGenerator/MGUIDOC.uxml
+++ b/Assets/MapGenerator/MGUIDOC.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <ui:VisualElement style="flex-grow: 1; align-items: flex-start; justify-content: center;">
-        <ui:VisualElement name="VisualElement" style="flex-grow: 0; flex-direction: column; align-items: flex-start; justify-content: center;">
+        <ui:VisualElement name="VisualElement" style="flex-grow: 0; flex-direction: column; align-items: stretch; justify-content: center;">
             <ui:VisualElement style="flex-grow: 0;">
                 <ui:Button text="Terrain" display-tooltip-when-elided="true" name="Terrain" style="flex-shrink: 1;" />
             </ui:VisualElement>
@@ -9,7 +9,7 @@
             </ui:VisualElement>
         </ui:VisualElement>
     </ui:VisualElement>
-    <ui:VisualElement name="VisualElement" style="flex-grow: 0; flex-direction: column-reverse;">
+    <ui:VisualElement name="VisualElement" style="flex-grow: 0; flex-direction: column-reverse; align-items: center;">
         <ui:VisualElement>
             <ui:Button text="New Map" display-tooltip-when-elided="true" name="NewMap" style="flex-shrink: 1;" />
         </ui:VisualElement>
