--- a/Assets/UI/InGameUI.uxml
+++ b/Assets/UI/InGameUI.uxml
@@ -23,7 +23,7 @@
     </ui:VisualElement>
     <ui:VisualElement name="Bottom" picking-mode="Ignore" style="flex-grow: 0; flex-direction: row; justify-content: space-around; flex-wrap: nowrap;">
         <ui:VisualElement name="LeftPanel" picking-mode="Ignore" style="flex-grow: 1; justify-content: center; align-items: center; max-width: 50%; max-height: none; min-width: 50%;">
-            <ui:VisualElement name="ProvinceDescription" style="flex-grow: 1;">
+            <ui:VisualElement name="ProvinceDescription" style="flex-grow: 1; background-color: rgba(77, 99, 96, 0.44);">
                 <ui:Label display-tooltip-when-elided="true" name="ProvinceName" text="ProvinceName" picking-mode="Ignore" style="justify-content: center;" />
                 <ui:Label text="ProvinceOwner" display-tooltip-when-elided="true" name="ProvinceOwner" picking-mode="Ignore" />
                 <ui:VisualElement name="Units" style="flex-direction: row;">
